--- a/Multiple Regression 3.qmd
+++ b/Multiple Regression 3.qmd
@@ -204,5 +204,21 @@ ggplot(priorsims, aes(x = area, y = weight, group = group)) +
   labs(x = "Standardized Area",
        y = "Standardized Weight")
 ```
-# **Q2.7 Run a model for the impact of food on fox weight**
+# Run Models
+```{r}
+food_on_area <- brm(avgfood ~ 1 + area, 
+                    data = fox_dat, 
+                    family = gaussian,
+                    # Here we set the priors that we investigated earlier
+                    prior = c(prior(normal(6, 0.5), class = Intercept),
+                              prior(normal(0,.2), class = b,),
+                              prior(exponential(1), class = sigma)),
+                    iter = 4000, warmup = 2000, chains = 4, cores = 4, seed = 1234,
+                    file = "output/food_on_area")
+```
 
+```{r}
+summary(food_on_area)
+```
+
+# **Q2.7 Run a model for the impact of food on fox weight**
