--- a/README.qmd
+++ b/README.qmd
@@ -224,6 +224,27 @@ We find that for an increase of 1 standard deviation in area, we expect to see a
 
 Now infer the total impact of adding food to a territory. Run a model with `weight` as a function of `avgfood`. Based on your results, does more food make foxes heavier? In your opinion, is this expected or unexpected? Please explain in two (2) or more sentences.
 
+```{r}
+# fox weight model
+m.flip.mass <- 
+  brm(data = fox_dat, # Give it fox data
+      # Choose a gaussian (normal) distribution
+      family = gaussian,
+      # Specify the model here. 
+      weight ~ 1 + avgfood,
+      # Here's where you specify parameters for executing the Markov chains
+      # We're using similar to the defaults, except we set cores to 4 so the analysis runs faster than the default of 1
+      iter = 2000, warmup = 1000, chains = 4, cores = 4,
+      # Setting the "seed" determines which random numbers will get sampled.
+      # In this case, it makes the randomness of the Markov chain runs reproducible 
+      # (so that both of us get the exact same results when running the model)
+      seed = 4,
+      # Save the fitted model object as output - helpful for reloading in the output later
+      file = "output/m.fox.weight")
+```
+```{r}
+summary(m.fox.weight)
+```
 
 -------------
 
