--- a/Multiple Regression 3.qmd
+++ b/Multiple Regression 3.qmd
@@ -224,7 +224,7 @@ summary(food_on_area)
 # **Q2.7 Run a model for the impact of food on fox weight**
 ```{r}
 # fox weight model
-m.flip.mass <- 
+m.fox.weights <- 
   brm(data = fox_dat, # Give it fox data
       # Choose a gaussian (normal) distribution
       family = gaussian,
@@ -244,3 +244,6 @@ m.flip.mass <-
 ```{r}
 summary(m.fox.weight)
 ```
+The slope shows a negative correlation between food and fox weight. This unexpected so something should be missing or mistaken.
+
+# **Q2.8 Is there a variable we should condition upon?**
