--- a/Multiple Regression 3.qmd
+++ b/Multiple Regression 3.qmd
@@ -1,15 +1,15 @@
 ---
 title: "Multiple Regression 3"
-subtitle: Sam Larralde and Ambrosio
+subtitle: Sam Larralde and Ambrosio Rivera
 format: pdf
 editor: visual
 ---
 
-## Activity 11: Statistical reasoning 3: multiple regression DAGs
+# **Activity 11: Statistical reasoning 3: multiple regression DAG's**
 
-# Install packages
+Install packages
 
-# Load packages
+Load packages
 
 ```{r}
 library(brms) # for statistics
@@ -25,71 +25,53 @@ standardize <- function(x) {
 }
 ```
 
-# 1. DAG practice
+# **1. DAG practice**
 
-# Question 1.1 Make Dag
+# Q 1.1 Make DAG
 
-```{r}
-dag {
-bb="0,0,1,1"
-A [pos="0.436,0.218"]
-B [pos="0.434,0.488"]
-C [pos="0.788,0.372"]
-U [pos="0.142,0.360"]
-X [pos="0.160,0.701"]
-Y [pos="0.794,0.691"]
-A -> C
-A -> U
-C -> B
-C -> Y
-U -> B
-U -> X
-X -> Y
-}
+dag { bb="0,0,1,1" A \[pos="0.436,0.218"\] B \[pos="0.434,0.488"\] C \[pos="0.788,0.372"\] U \[pos="0.142,0.360"\] X \[pos="0.160,0.701"\] Y \[pos="0.794,0.691"\] A -\> C A -\> U C -\> B C -\> Y U -\> B U -\> X X -\> Y }
 
-```
+# Q 1.2 Identifying forks
 
-# Question 1.2 Identifying forks
+X \<- U -\> B
 
-## X \<- U -\> B
+U \<-A -\> C
 
-## U \<-A -\> C
+B \<- C -\> Y
 
-## B \<- C -\> Y
+# Q 1.3 Identify colliders
 
-# Question 1.3 Identify colliders
+U → B ← C
 
-## U → B ← C
+C → Y ← X
 
-## C → Y ← X
-
-# Question 1.4 Modify the Dag
+# Q 1.4 Modify the DAG
 
 dag { bb="0,0,1,1" A \[pos="0.436,0.218"\] B \[pos="0.434,0.488"\] C \[pos="0.788,0.372"\] U \[pos="0.142,0.360"\] V \[pos="0.656,0.526"\] X \[pos="0.160,0.701"\] Y \[pos="0.794,0.691"\] A -\> C A -\> U C -\> B C -\> Y U -\> B U -\> X V -\> C V -\> Y X -\> Y }
 
-# Question 1.5 Identify paths
+# Q 1.5 Identify paths
 
-## x-\> y
+x-\> y
 
-## U -\> X -\> Y
+U -\> X -\> Y
 
-## A -\> U -\> X -\> Y
+A -\> U -\> X -\> Y
 
-# Question 1.6 Identify open backdoor paths
+# Q 1.6 Identify open backdoor paths
 
-## U -\> X
+U -\> X
 
-## C -\> Y
+C -\> Y
 
-## V -\> Y
+V -\> Y
 
-# Question 1.7 Identify variables to close the backdoors
+# Q 1.7 Identify variables to close the back doors
 
-## U, C, Y
+U, C, Y
 
-# Foxes: Regression Practice informed by DAGs
+# **Foxes: Regression Practice informed by DAG's**
 
-Load librarys
+Load library
 
 ```{r}
 # Load in the fox data
@@ -104,17 +86,17 @@ check out fox data
 head(foxes)
 ```
 
-# Question 2.1 Identify the fundamental relations in the fox DAG
+# Q 2.1 Identify the fundamental relations in the fox DAG
 
-## fork; groupsize \<-avgfood -\> weight
+fork: groupsize \<-avgfood -\> weight
 
-## colider; avgfood -\> weight \<- groupsize
+colider: avgfood -\> weight \<- groupsize
 
-## pipe; area -\> avgfood -\> weight
+pipe: area -\> avgfood -\> weight
 
-## pipe; avgfood-\>groupsize -\> weight
+pipe: avgfood-\>groupsize -\> weight
 
-# Total causal influence of area on weight
+Total causal influence of area on weight
 
 ```{r}
 fox_dat <- foxes %>%
@@ -143,17 +125,17 @@ ggplot(priorsims, aes(x = area, y = weight, group = group)) +
   labs(x = "Standardized Area", y = "Standardized Weight")
 ```
 
-# Question 2.2 Minimum fox weight
+# Q 2.2 Minimum fox weight
 
-## We think at minimum the fox might weight 9 kg
+We think at minimum the fox might weigh 10 kg
 
-# Question 2.3 Maximum fox wight
+# Q 2.3 Maximum fox weight
 
-## We think a reasonable maximum weight for a fox is 14g
+We think a reasonable maximum weight for a fox is 14g
 
-# Question 2.4 Modify simulation plot
+# Q 2.4 Modify simulation plot
 
-## min= 10kg, max = 14kg
+min= 10kg, max = 14kg
 
 ```{r}
 ggplot(priorsims, aes(x = area, y = weight, group = group)) +
@@ -176,11 +158,11 @@ ggplot(priorsims, aes(x = area, y = weight, group = group)) +
        y = "Standardized Weight")
 ```
 
-# Question 2.5 **Evaluate prior predictive simulation**
+# Q 2.5 Evaluate prior predictive simulation
 
 The priors do not seem reasonable, as weight will not cross into negative values.
 
-# **Q2.6 Refine priors**
+# Q 2.6 Refine priors
 
 ```{r}
 n <- 1000
@@ -204,7 +186,9 @@ ggplot(priorsims, aes(x = area, y = weight, group = group)) +
   labs(x = "Standardized Area",
        y = "Standardized Weight")
 ```
-# Run Models
+
+Run Models
+
 ```{r}
 food_on_area <- brm(avgfood ~ 1 + area, 
                     data = fox_dat, 
@@ -221,7 +205,8 @@ food_on_area <- brm(avgfood ~ 1 + area,
 summary(food_on_area)
 ```
 
-# **Q2.7 Run a model for the impact of food on fox weight**
+# Q 2.7 Run a model for the impact of food on fox weight
+
 ```{r}
 # fox weight model
 m.fox.weights <- 
@@ -242,8 +227,60 @@ m.fox.weights <-
 ```
 
 ```{r}
-summary(m.fox.weight)
+summary(m.fox.weights)
 ```
+
 The slope shows a negative correlation between food and fox weight. This unexpected so something should be missing or mistaken.
 
-# **Q2.8 Is there a variable we should condition upon?**
+# Q 2.8 Is there a variable we should condition upon?
+
+We should condition group size and area.
+
+# Q 2.9 What is your hypothesis about how group size affects weight?
+
+We hypothesize that group size is positively correlated with average weight. We think that larger groups will have a larger territory and more food available to them and therefore foxes from larger groups could weight more. Less individual resources more competition when they are in a bigger group. But its a trade off that they can have larger territory and more protection.
+
+Now lets run the model
+```{r}
+group_on_weight <- brm(weight ~ 1 + groupsize, 
+                       data = fox_dat, 
+                       family = gaussian,
+                       prior = c(prior(normal(0, 0.2), class = Intercept),
+                                 prior(normal(0, 0.5), class = b,),
+                                 prior(exponential(1), class = sigma)),
+                       iter = 4000, warmup = 2000, chains = 4, cores = 4, seed = 1234,
+                       file = "output/group_on_weight")
+```
+
+
+```{r}
+summary(group_on_weight)
+```
+Let's add in groupsize to block the pipe weight->groupsize->avgfood:
+```{r}
+food_direct <- brm(weight ~ 1 + avgfood + groupsize, 
+                   data = fox_dat,
+                   family = gaussian,
+                   prior = c(prior(normal(0, 0.2), class = Intercept),
+                             prior(normal(0, 0.5), class = b,),
+                             prior(exponential(1), class = sigma)),
+                   iter = 4000, warmup = 2000, chains = 4, cores = 4, seed = 1234,
+                   file = "output/food_direct")
+
+summary(food_direct)
+```
+
+
+# Q 2.10a What are the effects of avgfood and groupsize now that you have accounted for both variables?
+
+We can conclude our hypothesis, that average food is positively correlated with weight, and large groups make smaller foxes. The slope for average food was positive, meaning when food increased so did weight. While the slope for group size was negative so larger groups means less weight.
+
+# Q 2.10b How does this interpretation change your interpretation from the univariate regressions of each variable separately with weight?
+
+Initially, the older model suggested that more food meant lighter foxes but the newer model shows that to be in reverse.
+
+# Q 2.10c Provide a small discussion (2-4 sentences) explaining in your own words why these results turned out the way they did, in the context of the ecological system of fox territories. Include why you think that the univariate regressions may have suggested no relationship while the multiple regression suggests a different answer
+
+Larger groups of foxes have more competition between each other for resources, which will lower their food availabity and weight. While more food on its own of course leads to individually heavier foxes. The model may have been misinterpreting food availability before, as fox group size has an impact on the other variables.
+
+
